<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@color/colorAccent"
    android:orientation="vertical"
    android:padding="18dp"
    android:showDividers="end">

    <TextView
        android:id="@+id/nome_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/perfil_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perfil_usuario"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/id_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id_usuario"
            android:textAlignment="textEnd"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>